mouse: be more careful to avoid segfaults

It appears that X can sometimes give us NULL for a device,
but then can't handle given NULL back as a device :-(

https://bugzilla.gnome.org/show_bug.cgi?id=657462